@@ -17,6 +17,7 @@
 		###USER.UID###: ###USER.COMBINED_NAME###
 
 		###LOOP:WIDGET:USER_PROFILE.PROFILE_ACTIONS|USER###
+		###LOOP:WIDGET:USER_PROFILE.IMAGE|USER###
 	</li>
 	<!-- ###LOOP_CONTENT### -->
 	<!-- ###LOOP:USERS### end -->
